# zsh-llm-cli-autocomplete-tool

./: AGENTS.md  README.md  USE_MERGED_MODEL.md  evaluation_report.json  install.sh  mise.toml  pyproject.toml  requirements.txt  run_training.sh  upload_to_huggingface.sh  use_merged_model.sh
.sisyphus/drafts/: omz-plugin-integration-analysis.md
config/: custom.yaml  default.yaml
docs/: INLINE_COMPLETION.md
llama.cpp/: convert_hf_to_gguf.py
scripts/: benchmark_merged_model.py  chat_merged_model.py  run_completion_daemon.sh  test_model_smartness.py
src/model_cli_autocomplete.egg-info/: PKG-INFO  SOURCES.txt
src/model_completer/: __init__.py  cli.py  daemon.py  enhanced_completer.py  ollama_complete.py  ollama_lora_import.py
src/scripts/: zsh_autocomplete.plugin.zsh  zsh_autosuggest_strategy_llm.zsh
src/training/: TRAINING_GUIDE.md  TRAINING_STATUS_REPORT.md  axolotl_trainer.py  convert_to_axolotl_format.py  evaluate_model.py  patch_axolotl.py  prepare_and_split_data.py  prepare_zsh_data.py  qwen3_axolotl_config.yml  qwen3_axolotl_trainer.py  test_adapter.py  train_workflow.py  upload_to_hf.py
src/training/data_splits/: test.jsonl  train.jsonl  val.jsonl
src/training/data_splits_axolotl/: test_axolotl.jsonl  train_axolotl.jsonl  val_axolotl.jsonl
zsh-lora-output-epoch1-backup/: README.md  adapter_config.json  config.json
zsh-lora-output-old-backup/: README.md  training_config.yaml
zsh-lora-output-old-backup/checkpoint-210/: adapter_config.json  scheduler.pt  trainer_state.json
zsh-model-merged/: config.json
